--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,17 +11,32 @@
     <link rel="stylesheet" href="assets/icons/bootstrap-icons/bootstrap-icons.min.css">
 </head>
 <body>
-    <div class="tarjetas-html">
-        <h3>Redirection pages & Login Cards:</h3>
-        <li><a href="assets/templates/pagoenproceso.html">Pago en proceso / formularioWeb-1</a></li>
-        <li><a href="assets/templates/pagoexitoso.html">Pago exitoso / formularioWeb-1</a></li>
-        <li><a href="assets/templates/LoginInstagram.html">Login Instagram / Prácticas</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Login Facebook / Prácticas</a></li>
+
+   <section class="tarjetas-html">
+    <h4>Templates /Login Cards /Grid Template</h4>
+    <li><a href="assets/templates/pagoenproceso.html">Pago en proceso /FormularioWeb-1</a></li>
+    <li><a href="assets/templates/pagoexitoso.html">Pago exitoso /FormularioWeb-1</a></li>
+    <li class="drop-item-list"> Cards & Logins Forms <i class="bx bi-chevron-right cd"></i></li>
+    <div class="sub-item-list">
+        <li><a href="assets/templates/LoginInstagram.html">Login Instagram / Prácticas HTML - CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Login Facebook / Prácticas HTML -CSS</a></li>
     </div>
+    <li><a href="">Following Cards /Twitter Styles - React + Vite</a></li>
+    <li><a href="">Cards + Button Effects /HTML -CSS</a></li>
+    <li class="drop-item-list">Error 404 Templates /HTML - CSS <i class="bx bi-chevron-right cd"></i></li>
+    <div class="sub-item-list">
+        <li><a href="assets/templates/LoginInstagram.html">Template 01 / Prácticas HTML - CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 02 / Prácticas HTML -CSS</a></li>
+    </div>
+    <li><a href="">Media Query /Grid Template CSS</a></li>
+</section>
+
+    
 </body>
 
 <footer>
-    <p>&copy;LoginCards 2023 - Desarrollo <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
+    <p>&copy;empty 2023 - Desarrollo <span style="color: royalblue;"><a href="https://www.instagram.com/calcagni_gabriel26/?ishid=ZDdkNTZiNTM%3D">SolidSnk86</a></span></p>
 </footer>
 
+<script src="./assets/scripts/index.js"></script>
 </html>
