--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
    <section class="tarjetas-html">
-    <h4>Templates /Login Cards /Grid Template</h4>
+    <h4>Templates /Collection</h4>
     <li><a href="assets/templates/pagoenproceso.html">Pago en proceso /FormularioWeb-1</a></li>
     <li><a href="assets/templates/pagoexitoso.html">Pago exitoso /FormularioWeb-1</a></li>
     <li class="drop-item-list"> Cards & Logins Forms <i class="bx bi-chevron-right cd"></i></li>
@@ -27,6 +27,12 @@
     <div class="sub-item-list">
         <li><a href="assets/templates/LoginInstagram.html">Template 01 / Prácticas HTML - CSS</a></li>
         <li><a href="assets/templates/LoginFacebook.html">Template 02 / Prácticas HTML -CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 03 / Prácticas HTML -CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 04 / Prácticas HTML -CSS</a></li>
+        <li><a href="assets/templates/LoginInstagram.html">Template 05 / Prácticas HTML - CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 07 / Prácticas HTML -CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 08 / Prácticas HTML -CSS</a></li>
+        <li><a href="assets/templates/LoginFacebook.html">Template 09 / Prácticas HTML -CSS</a></li>
     </div>
     <li><a href="">Media Query /Grid Template CSS</a></li>
 </section>
