--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <li><a href="">Cards + Button Effects /HTML -CSS</a></li>
     <li class="drop-item-list">Error 404 Templates /HTML - CSS <i class="bx bi-chevron-right cd"></i></li>
     <div class="sub-item-list">
-        <li><a href="assets/templates/LoginInstagram.html">Template 01 / Prácticas HTML - CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 02 / Prácticas HTML -CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 03 / Prácticas HTML -CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 04 / Prácticas HTML -CSS</a></li>
-        <li><a href="assets/templates/LoginInstagram.html">Template 05 / Prácticas HTML - CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 07 / Prácticas HTML -CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 08 / Prácticas HTML -CSS</a></li>
-        <li><a href="assets/templates/LoginFacebook.html">Template 09 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 01 / Prácticas HTML - CSS</a></li>
+        <li><a href="">Template 02 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 03 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 04 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 05 / Prácticas HTML - CSS</a></li>
+        <li><a href="">Template 07 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 08 / Prácticas HTML -CSS</a></li>
+        <li><a href="">Template 09 / Prácticas HTML -CSS</a></li>
     </div>
     <li><a href="">Media Query /Grid Template CSS</a></li>
 </section>
